# WarPie

./: .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .shellcheckrc  CHANGELOG.md  README.md  WarPie-README.md  eslint.config.js  jest.config.cjs  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-enhancement.yml  4-documentation.yml  config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: release.yml  security.yml  tests.yml  version-check.yml
docs/: ARCHITECTURE.md  INSTALLATION.md  QUICK_REFERENCE.md  TROUBLESHOOTING.md
install/: install.sh  warpie_config.py
scripts/: build-release.sh  extract-js.cjs  extract-js.js  validate_manifest.py
systemd/: gpsd-wardriver.service  warpie-control.service  warpie-filter-processor.service  warpie-network.service
tests/: conftest.py
tests/bash/: test_scripts.bats  test_systemd.bats
tests/javascript/: warpie-control.test.js
tests/python/: test_filter_processor.py  test_kismet_to_wigle.py  test_performance_helpers.py  test_warpie_control.py  test_web_helpers.py  test_web_routes.py
web/: __init__.py  app.py  config.py
web/routes/: __init__.py  filters.py  logs.py  main.py  performance.py  targets.py
web/static/: style.css  warpie.js
web/templates/: base.html  index.html
web/templates/partials/: _controls.html  _dynamic_manager.html  _exclusion_list.html  _flyout_filters.html  _flyout_logs.html  _flyout_performance.html  _log_content.html  _mode_buttons.html  _oui_list.html  _performance_alerts.html  _performance_metrics.html  _scan_results.html  _static_manager.html  _status.html  _target_list_checkboxes.html  _target_list_editor.html  _target_lists.html  _target_picker.html  _toast.html
