[project]
name = "warpie"
version = "2.4.1-dev"
description = "Raspberry Pi Wardriving Platform with Kismet integration"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"
authors = [
    {name = "WarPie Contributors"}
]
keywords = ["wardriving", "kismet", "raspberry-pi", "wifi", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/warpie/warpie"
Repository = "https://github.com/warpie/warpie"
Issues = "https://github.com/warpie/warpie/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "N",      # pep8-naming
]
ignore = [
    "S101",   # Allow assert statements (needed for tests)
    "S603",   # Allow subprocess without shell=True check (we control inputs)
    "S607",   # Allow partial executable path (system commands)
    "PLR0913", # Too many arguments (web handlers need them)
    "PLR2004", # Magic value comparison (acceptable in scripts)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG", "PLR2004"]
"bin/*" = ["S603", "S607"]
# warpie-control.py has embedded HTML templates and intentional exception handling patterns
# E501/W291/W293: HTML templates have long lines and formatting
# S104: Binding to all interfaces is expected for a network-accessible web server
# E722: Bare except is intentional for graceful web server error handling
# PTH*: pathlib suggestions - defer to future refactor
# PLR0911: Too many returns - acceptable for get_logs method
# ERA001: False positives on API comment headers
# RUF005: List concatenation style - acceptable
"bin/warpie-control.py" = ["E501", "W291", "W293", "S104", "E722", "PTH103", "PTH119", "PTH123", "PTH207", "PLR0911", "ERA001", "RUF005"]

[tool.ruff.lint.isort]
known-first-party = ["warpie"]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["bin"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 50
show_missing = true
