[project]
name = "warpie"
version = "2.4.1"
description = "Raspberry Pi Wardriving Platform with Kismet integration"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"
authors = [
    {name = "WarPie Contributors"}
]
keywords = ["wardriving", "kismet", "raspberry-pi", "wifi", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "flask>=3.0",
    "waitress>=3.0",
]

[project.urls]
Homepage = "https://github.com/PoppaShell/WarPie"
Repository = "https://github.com/PoppaShell/WarPie"
Issues = "https://github.com/PoppaShell/WarPie/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "N",      # pep8-naming
]
ignore = [
    "S101",   # Allow assert statements (needed for tests)
    "S603",   # Allow subprocess without shell=True check (we control inputs)
    "S607",   # Allow partial executable path (system commands)
    "PLR0913", # Too many arguments (web handlers need them)
    "PLR2004", # Magic value comparison (acceptable in scripts)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG", "PLR2004"]
"bin/*" = ["S603", "S607"]
# bin/warpie-control - entry point with deferred imports and all-interface binding
"bin/warpie-control" = ["S104", "PLC0415"]
# web/ package - Flask routes need subprocess calls and bind to all interfaces
# PLR0911: Multiple return statements in call_filter_script for error handling clarity
"web/*" = ["S104", "S603", "S607", "PLR0911"]
# warpie-filter-processor.py processes files and uses os.path extensively
# PTH*: pathlib conversion deferred - os.path is more familiar for sysadmin scripts
# PLR0912/PLR0915: Complex functions acceptable for CLI main() and workflow functions
# PLW2901: Loop variable reassignment is intentional for line processing
# ARG001: signal handler frame argument required by signature
"bin/warpie-filter-processor.py" = ["PTH103", "PTH110", "PTH111", "PTH112", "PTH113", "PTH118", "PTH119", "PTH120", "PTH123", "PTH202", "PTH204", "PTH208", "PLR0912", "PLR0915", "PLW2901", "ARG001", "SIM105"]
# warpie-filter-manager.py is a complex CLI tool with config file parsing
# UP045: Optional[X] style is more readable for CLI tools
# PLW1510: subprocess.run without check= is intentional (we handle errors manually)
# PLR0912/PLR0915: Complex config parsing functions
# PLW2901: Loop variable reassignment for line processing
# ERA001: Commented code is documentation for config file format
# SIM102: Nested if statements are more readable in complex filter logic
# SIM110: Explicit for loops are clearer for entry matching
# PLC0415: Deferred imports reduce startup time for CLI tools
# PTH123: open() is acceptable in complex file processing
# E501: Long lines acceptable for user-facing messages
# ARG002: all_static parameter reserved for future cleanup modes
"bin/warpie-filter-manager.py" = ["UP045", "PLW1510", "PLR0912", "PLR0915", "PLW2901", "ERA001", "SIM102", "SIM110", "PLC0415", "PTH123", "E501", "ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["warpie"]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["bin"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 50
show_missing = true
